--- a/templates/form1.html
+++ b/templates/form1.html
@@ -1,8 +1,12 @@
 <!DOCTYPE  html>
 <html>
 <head><title> forms1DOThtml </title>
-<link rel="stylesheet" href="fitgritstyling/fitgritstyle1.css">
+<link rel="stylesheet" href="fitgritstyling/fitgritstyle2.css">
 </head>
+<h1>WELCOME ! YOU CAN BROWSE EXERCISE EQUIPMENT HERE.</h1>
+<br><br>
+<p><a href="file:///C:/Users/cody/Downloads/Git/gitcode/fitgrit/fitgrithome.html"><b>HOME</b></a></p>
+<br><br>
 <body>
    <form action="https://duckduckgo.com" method="GET">
        <label for="search-term">Search for:</label>
